chromeos: Fix crash in select-to-speak for keyboard shortcut dialog

The keyboard shortcut dialog is a UI mojo app that runs in a separate
process and has its own AXTree. The code in AutomationManagerAura that
looks up the AXTree ID for a hit test was looking at the wrong
views::View to get the value, due to a confusing condition in how
views::Widget looks up contents views.

Added DCHECKs to make sure this looks up a proper remote AXTree id.

Bug: 872421
Test: Turn on select-to-speak, hit Ctrl-Alt-/, click in dialog
Change-Id: Id9aba72b1aa73b7677e0dc52d1a427c202db0a78
Reviewed-on: https://chromium-review.googlesource.com/1171261
Reviewed-by: Katie Dektar <katie@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Commit-Queue: James Cook <jamescook@chromium.org>
Cr-Commit-Position: refs/heads/master@{#582998}